setting up tasks
