# app/app/Models/Task.php
@@ -6,21 +6,19 @@ use Illuminate\Database\Eloquent\Concerns\HasUuids;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Card extends Model
+class Task extends Model
 {
     use HasFactory, HasUuids;
-    protected $fillable = [
-        'card_number',
-        'cvv',
-        'expiration',
-        'user_id'
-    ];
 
     public function user() {
         $this->belongsTo(User::class);
     }
 
-    public function tasks() {
-        $this->hasMany(Task::class);
+    public function merchant() {
+        $this->belongsTo(Merchant::class);
+    }
+
+    public function card() {
+        $this->belongsTo(Card::class);
     }
 }
