# app/routes/api.php
@@ -1,8 +1,9 @@
 <?php
 
 use App\Http\Controllers\CardController;
-use App\Http\Controllers\User\AuthenticatedSessionController;
-use App\Http\Controllers\User\RegisteredUserController;
+use App\Http\Controllers\MerchantController;
+use App\Http\Controllers\Auth\AuthenticatedSessionController;
+use App\Http\Controllers\Auth\RegisteredUserController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
@@ -11,6 +12,8 @@ Route::prefix('v1')->group(function () {
 
    Route::middleware('auth:api')->group(function () {
        Route::post('/card', [CardController::class, 'store']);
+       Route::get('/merchant', [MerchantController::class, 'index']);
+       Route::post('/merchant', [MerchantController::class, 'store']);
    });
 });
 
